<?xml version="1.0"?>
<package format="3">
  <name>rc_truck_bringup</name>
  <version>0.0.0</version>
  <description>Launch files and configuration for the RC truck system.</description>

  <maintainer email="todo@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rc_truck_control</exec_depend>
  <exec_depend>rc_truck_hw</exec_depend>
  <exec_depend>rc_truck_perception</exec_depend>
  <exec_depend>rc_truck_navigation</exec_depend>
  <exec_depend>rc_truck_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
