<?xml version="1.0"?>
<package format="3">
  <name>rc_truck_hw</name>
  <version>0.0.0</version>
  <description>Hardware interface nodes for the RC truck (ESC, servo, sensors).</description>

  <maintainer email="todo@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>python3</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rc_truck_interfaces</exec_depend>

  <test_depend>ament_pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
