<?xml version="1.0"?>
<package format="3">
  <name>rc_truck_perception</name>
  <version>0.0.0</version>
  <description>Perception nodes for camera and range sensor processing.</description>

  <maintainer email="Edelva01@users.noreply.github.com">Edelva01</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>python3</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rc_truck_interfaces</exec_depend>

  <test_depend>ament_pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
